# tizenclaw

./: .agent_files.txt  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  PLAN.md  README.md  TASKS.md  build_log.txt  build_log_arm.txt  build_log_verify.txt  build_warnings_summary.txt  commit_temp.txt  deploy.sh  deploy_host.sh  install.sh  repo_config.ini  ruff.toml  task.md  test_parse.rs  test_wf.md  tizenclaw-sdk.pc  tizenclaw.pc  개선-요구사항-프롬프트.md
.dev/: DASHBOARD.md  PLAN.md  SCORE.md  WORKFLOWS.md
.dev_note/: DASHBOARD.md  PLAN.md  commit_msg.txt
.tmp/: commit_msg.txt
data/: llm_config.json.sample  tool_policy.json
docs/: ANALYSIS.md  ANALYSIS_KOR.md  API_REFERENCE.md  ARCHITECTURE.md  ASSETS.md  BENCHMARK.md  DESIGN.md  DESIGN_KOR.md  FEATURES.md  PSS_PROFILING.md  RAG.md  ROADMAP.md  ROADMAP_KOR.md  ROADMAP_MULTI_AGENT.md  RSS_PROFILING.md  SKILLS.md  SKILLS_AND_TOOLS.md  SKILLS_KOR.md  TESTING.md  TOOLS.md  agent_capabilities.md  agent_loop_v2_design.md  agent_loop_v2_planning.md  capabilities_multi_agent.md  capabilities_telegram_channel_fix.md  design.md  development_roadmap.md  implementation_phases.md  ipc_server_blocking_fix_planning.md  llm_cache_telemetry_design.md  llm_config_benchmark_design.md  multi_agent_architecture.md  onnx-dynamic-design.md  project_analysis.md  requirements.md  telegram_channel_architecture.md  tizenclaw_cli_pinchbench_guide_ko.md
docs_detailed/: 01_OVERVIEW.md  02_RUST_FOR_CPP_DEVELOPERS.md  03_ARCHITECTURE_DEEP_DIVE.md  04_AGENTIC_AI_CONCEPTS.md  05_LLM_BACKEND_SYSTEM.md  06_TOOLS_AND_SKILLS_GUIDE.md  07_CHANNELS_AND_IPC.md  08_PLATFORM_AND_FFI.md  09_STORAGE_AND_MEMORY.md  10_BUILD_TEST_DEPLOY.md  11_MEMORY_SESSION_DEEPDIVE.md  12_MULTI_AGENT_ORCHESTRATION.md  13_SAFETY_AND_POLICY.md  14_EVENT_BUS_TRIGGERS.md  15_EXTENDING_TIZENCLAW.md  README.md  TizenClaw_First_Principles.pptx  TizenClaw_First_Principles_v2.pptx
inc/: agent_core.hh  anthropic_backend.hh  gemini_backend.hh  http_client.hh  llm_backend.hh  ollama_backend.hh  openai_backend.hh  tizenclaw.hh
packaging/: tizenclaw-code-sandbox-debug.service  tizenclaw-code-sandbox.service  tizenclaw-code-sandbox.socket  tizenclaw-core.pc.in  tizenclaw-debug.service  tizenclaw-skills-secure.service  tizenclaw-tool-executor.service  tizenclaw-tool-executor.socket  tizenclaw.pc.in  tizenclaw.service  tizenclaw.spec
plan/: TODO-01-event-bus-system-context.md  TODO-02-llm-self-creating-agents.md  TODO-03-autonomous-context-awareness.md  gstack_analysis.md
rust/: Cargo.toml
scripts/: Dockerfile  build_rootfs.sh  ci_build.sh  code_executor.py  create_host_release_bundle.sh  fetch_crun_source.sh  pre-commit  run_host_system_contracts.sh  run_standard_container.sh  setup-hooks.sh  setup_hooks.sh  skills_secure_container.sh  start_mcp_tunnel.sh  test_host_bundle_install.sh  test_local_checkout_install.sh  test_source_install.sh  tizenclaw_code_executor.py  tizenclaw_secure_container.sh  verify_doc_architecture.py  write_pinchbench_score.py
skills/: skill_executor.py
src/: CMakeLists.txt  agent_core.cc  agent_core.cpp  anthropic_backend.cc  container_engine.cc  container_engine.cpp  gemini_backend.cc  (+6 more)
src/libtizenclaw-core/: Cargo.toml
src/libtizenclaw-core/src/: curl_wrapper.rs  lib.rs  llm_types.rs
src/libtizenclaw-core/src/framework/: generic_linux.rs  loader.rs  mod.rs  paths.rs
src/libtizenclaw-core/src/plugin_core/: adapters.rs  logging.rs  mod.rs  pkgmgr_client.rs
src/libtizenclaw-core/src/tizen_sys/: mod.rs
src/pkgmgr-metadata-plugin/: CMakeLists.txt
src/pkgmgr-metadata-plugin/cli/: plugin.c  tizenclaw_metadata_cli_plugin.cc
src/pkgmgr-metadata-plugin/llm-backend/: plugin.c  tizenclaw_metadata_llm_backend_plugin.cc
src/pkgmgr-metadata-plugin/rust/: Cargo.toml  build.rs
src/pkgmgr-metadata-plugin/rust/src/: lib.rs
src/pkgmgr-metadata-plugin/skill/: plugin.c  tizenclaw_metadata_skill_plugin.cc
src/tizenclaw-metadata-cli-plugin/: Cargo.toml
src/tizenclaw-metadata-cli-plugin/src/: lib.rs
src/tizenclaw-metadata-llm-backend-plugin/: Cargo.toml  build.rs
src/tizenclaw-metadata-llm-backend-plugin/data/: tizenclaw-metadata-llm-backend-plugin.info
src/tizenclaw-metadata-llm-backend-plugin/src/: lib.rs
src/tizenclaw-metadata-skill-plugin/: Cargo.toml  build.rs
src/tizenclaw-metadata-skill-plugin/src/: lib.rs
src/tizenclaw-tests/: Cargo.toml
src/tizenclaw-tests/src/: client.rs  main.rs  scenario.rs
src/tizenclaw-tool-executor/: Cargo.toml  file_manager.cc  file_manager.hh  peer_validator.cc  peer_validator.hh  python_engine.cc  python_engine.hh  sandbox_proxy.cc  sandbox_proxy.hh  tizenclaw_tool_executor.cc  tool_handler.cc  tool_handler.hh
src/tizenclaw-tool-executor/src/: main.rs  peer_validator.rs
src/tizenclaw-web-dashboard/: Cargo.toml
src/tizenclaw-web-dashboard/src/: main.rs
src/tool_executor/: CMakeLists.txt  tool_executor_main.cc
test/unit_tests/: CMakeLists.txt  action_bridge_test.cc  agent_core_test.cc  agent_role_test.cc  audit_logger_test.cc  container_engine_test.cc  embedding_store_test.cc  http_client_test.cc  key_store_test.cc  llm_backend_test.cc  main.cc  mcp_server_test.cc  ota_updater_test.cc  pipeline_executor_test.cc  session_store_test.cc  system_cli_adapter_test.cc  telegram_client_test.cc  tool_indexer_test.cc  tool_policy_test.cc
test/unit_tests/mock/: mock_llm_backend.hh
tizenclaw/: Cargo.toml
tizenclaw/src/: main.rs
tizenclaw/src/channel/: a2a_handler.rs  channel_factory.rs  discord_channel.rs  mcp_client.rs  mod.rs  slack_channel.rs  telegram_client.rs  voice_channel.rs  web_dashboard.rs  webhook_channel.rs
tizenclaw/src/core/: agent_core.rs  agent_role.rs  autonomous_trigger.rs  capability_registry.rs  event_bus.rs  ipc_server.rs  mod.rs  pipeline_executor.rs  safety_guard.rs  skill_manifest.rs  skill_plugin_manager.rs  skill_repository.rs  skill_watcher.rs  task_scheduler.rs  tool_declaration_builder.rs  tool_policy.rs  workflow_engine.rs
tizenclaw/src/infra/: http_client.rs  mod.rs
tizenclaw/src/llm/: mod.rs
tizenclaw/src/storage/: session_store.rs
(+588 files in other folders)
