[workspace]
resolver = "2"
members = [
    "src/libtizenclaw",
    "src/tizenclaw",
    "src/tizenclaw-cli",
    "src/libtizenclaw-client",
    "src/libtizenclaw-sdk",
    "src/tizenclaw-tool-executor",
    "src/tizen-sys",
    "src/tizenclaw-core",
]

[profile.release]
opt-level = "s"  # Optimize for size
# lto = true       # Disabled: Causes undefined references to vendored C libs in Tizen armv7l GCC ld.
panic = "abort"  # Abort on panic for smaller binary size
# codegen-units = 1 # Disabled: Can interfere with cross-language linking on ARM.
