[package]
name = "tizenclaw"
version = "1.0.0"
edition = "2021"

[dependencies]
tizen-sys = { path = "../tizen-sys" }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client — native-tls only (no ring/rustls)
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }

# SQLite (bundled = compiles sqlite3 from source)
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging facade
log = "0.4"

# POSIX (signals, sockets)
libc = "0.2"
