[package]
name = "libtizenclaw-core"
version = "1.0.0"
edition = "2021"
description = "TizenClaw Core framework and SDK — builds as libtizenclaw_core.so"

[lib]
name = "tizenclaw_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
libc = "0.2"
libloading = "0.8"
reqwest = { version = "0.12", features = ["native-tls-vendored", "blocking"], default-features = false }
