[package]
name = "tizenclaw-metadata-cli-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tizenclaw_metadata_cli_plugin"
crate-type = ["cdylib"]

[dependencies]
tizenclaw_plugin = { package = "tizenclaw-metadata-plugin", path = "../tizenclaw-metadata-plugin", default-features = false, features = ["helper-only"] }
