[package]
name = "tizenclaw-tests"
version = "1.0.0"
edition = "2021"
description = "System-test client for TizenClaw daemon IPC scenarios"

[[bin]]
name = "tizenclaw-tests"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
